--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-.DS_Store
 .AppleDouble
 .LSOverride
+.DS_Store
+.idea/
+.idea/*
+.vscode
+*.sublime*
+npm-debug.*
 
+dist/
 node_modules/
-app/css/
+app/css/*
+package-lock.json
